Bump spring boot and refactor deprecations (#850)
* Bump spring boot and refactor deprecations

* Legg til kotlin-spring plugin for å åpne alle Configuration klasser

* Fix unintended merge of deps

* Rydde vekk utkommentert kode

* Null-safe håndtering i veilarbarenamapper etter sonar qualitygate

* Null-safe håndtering i veilarbarenamapper etter sonar qualitygate

---------

Co-authored-by: Sigurd Grøneng <sigurd.groneng@nav.no>