@@ -64,10 +64,10 @@ public class OkHttpClientConfig {
                 .build();
     }
 
-    private final String veilarboppfolgingScope = String.format("api://%s-gcp.poao.veilarboppfolging/.default", isProduction().orElse(false) ? "prod" : "dev");
-    private final String veilarbarenaScope = String.format("api://%s-fss.pto.veilarbarena/.default", isProduction().orElse(false) ? "prod" : "dev");
-    private final String orkivarScope = String.format("api://%s-gcp.dab.orkivar/.default", isProduction().orElse(false) ? "prod" : "dev");
-    private final String dialogScope = String.format("api://%s-gcp.dab.veilarbdialog/.default", isProduction().orElse(false) ? "prod" : "dev");
+    private final String veilarboppfolgingScope = "api://%s-gcp.poao.veilarboppfolging/.default".formatted(isProduction().orElse(false) ? "prod" : "dev");
+    private final String veilarbarenaScope = "api://%s-fss.pto.veilarbarena/.default".formatted(isProduction().orElse(false) ? "prod" : "dev");
+    private final String orkivarScope = "api://%s-gcp.dab.orkivar/.default".formatted(isProduction().orElse(false) ? "prod" : "dev");
+    private final String dialogScope = "api://%s-gcp.dab.veilarbdialog/.default".formatted(isProduction().orElse(false) ? "prod" : "dev");
 
     private Interceptor azureAdInterceptor(Supplier<String> getToken) {
         return chain -> {
