@@ -14,7 +14,7 @@ public class MetricsClientMock implements MetricsClient {
 
     @Override
     public void report(String name, Map<String, Object> fields, Map<String, String> tags, long l) {
-        log.info(String.format("sender event %s Fields: %s Tags: %s", name, fields.toString(), tags.toString()));
+        log.info("sender event %s Fields: %s Tags: %s".formatted(name, fields.toString(), tags.toString()));
     }
 
 }
